--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,9 @@
 .env
+wp-content/themes/twentytwentyfour
+wp-content/themes/twentytwentythree
+wp-content/themes/twentytwentytwo
+wp-content/index.php
+wp-content/plugins/akismet
+wp-content/plugins/hello.php
+wp-content/plugins/index.php
+wp-content/themes/index.php
