--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,11 @@
 wp-content/themes/twentytwentyfour
 wp-content/themes/twentytwentythree
 wp-content/themes/twentytwentytwo
+wp-content/themes/generatepress
 wp-content/index.php
 wp-content/plugins/akismet
+wp-content/plugins/woocommerce
 wp-content/plugins/hello.php
 wp-content/plugins/index.php
 wp-content/themes/index.php
+wp-content/uploads
